--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -29,6 +29,9 @@
       <li class="pt-6 px-2" routerLinkActive="bg-red-900 text-white">
         <a routerLink="/soporte">Soporte</a>
       </li>
+      <li  *ngIf="(isAuthenticated$ | async)" class="pt-6 px-2 text-red-600" routerLinkActive="bg-red-700 text-white">
+        <a routerLink="/profile/misordenes">Notificar Envío</a>
+      </li>
     </ul>
     <div class="justify-self-end">
       <ul
