--- a/src/app/profile/profileSecciones/mis-datos/mis-datos.component.html
+++ b/src/app/profile/profileSecciones/mis-datos/mis-datos.component.html
@@ -1,7 +1,11 @@
 <div class="flex flex-col h-fit">
-    <div class="bg-red-700 p-5">
-      <h2 class="text-2xl font-bold text-white text-center tracking-wide">Mi Perfil</h2>
+      <div class="bg-red-600 shadow-md">
+    <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
+      <h1 class="text-3xl font-bold text-white text-center tracking-wide">
+        Mi perfil
+      </h1>
     </div>
+  </div>
       <div class="p-6 md:p-8 space-y-4">
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
