--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,7 +10,7 @@
 </div>
   <!-- Sección de registro -->
   <div class="flex-1 flex items-center justify-center bg-red-700">
-    <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-2xl">
+    <div class="bg-white rounded-lg shadow-lg p-8 w-5/6">
       <form class="space-y-6" (ngSubmit)="onSubmit()" [formGroup]="userForm">
         <h2 class="text-red-700 text-2xl font-bold mb-6">Registrarse</h2>
         <div class="flex flex-col gap-4">
